@@ -1,3 +1,6 @@
+2008-01-23 Ian Rutt
+ * Changed sine-wave fitting to temperature to be true by default.
+
 2008-01-21 Ian Rutt
  * Fixed problem with GLINT output files in restart code
 
